--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
       #hd-rewrite-rules {
           font-weight: bold;
           margin: 5px 0 5px 10px;
+          font-size: 15pt;
       }
 
       .row {
@@ -142,7 +143,7 @@
                   class="btn green lighten-2"
                   id="start-reset"
                   onclick="start_reset()"
-                  disabled="">
+                  >
                   Graph!
                 </button>
           </div>
@@ -169,6 +170,8 @@
                   </button>
             </div>
           </div>
+          <!-- Add default rewrite rule --!>
+          <div class="row" style="margin-left: 1em;"><p style="font-family: monospace; font-size: 10pt; margin-top: 1em; overflow: auto; white-space: nowrap;" class="col s5">(* pa 2)</p><p class="col s1" style="font-size: 20pt; margin-top: 0px;">→</p><p style="font-family: monospace; font-size: 10pt; margin-top: 1em; overflow: auto; white-space: nowrap;" class="col s5">(&lt;&lt; pa 1)</p><button class="red col" style="text-align: center; padding-left: 0.3em; padding-right: 0.3em; margin-top: 0.5em; margin-left: 0.5em;" onclick="confirm_rwr(event)">⨯</button></div>
         </div>
       </div>
 
